@@ -85,7 +85,7 @@ func init() {
 // implement an echo server
 func TestEchoTLSServer(t *testing.T) {
 	// instantiate an asocket (failure)
-	c := Config{Sockname: "127.0.0.1:50707", Msglvl: All}
+	c := &Config{Sockname: "127.0.0.1:50707", Msglvl: All}
 	as, err := NewTLS(c, clienttc)
 	if err == nil {
 		as.Quit()
@@ -93,7 +93,7 @@ func TestEchoTLSServer(t *testing.T) {
 	}
 
 	// instantiate an asocket (success)
-	c = Config{Sockname: "127.0.0.1:50707", Msglvl: All}
+	c = &Config{Sockname: "127.0.0.1:50707", Msglvl: All}
 	as, err = NewTLS(c, servertc)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -161,7 +161,7 @@ func TestEchoTLSServer(t *testing.T) {
 // now do it in ipv6
 func TestEchoTLS6Server(t *testing.T) {
 	// instantiate an asocket
-	c := Config{Sockname: "[::1]:50707", Msglvl: All}
+	c := &Config{Sockname: "[::1]:50707", Msglvl: All}
 	as, err := NewTLS(c, servertc)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -229,7 +229,7 @@ func TestEchoTLS6Server(t *testing.T) {
 // this time our (less) fake client will send a string over the
 // connection and (hopefully) get it echoed back.
 func echoTLSclient(sn string, t *testing.T) {
-	ac, err := aclient.NewTLS(aclient.Config{Addr: sn}, clienttc)
+	ac, err := aclient.NewTLS(&aclient.Config{Addr: sn}, clienttc)
 	if err != nil {
 		t.Fatalf("aclient instantiation failed! %s", err)
 	}
