@@ -21,7 +21,7 @@ func echo(args [][]byte) ([]byte, error) {
 // implement an echo server
 func TestEchoServer(t *testing.T) {
 	// instantiate an asocket
-	c := Config{Sockname: "/tmp/test02.sock", Msglvl: All}
+	c := &Config{Sockname: "/tmp/test02.sock", Msglvl: All}
 	as, err := NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -90,7 +90,7 @@ func echotests(as *Asock, t *testing.T) {
 // this time our (less) fake client will send a string over the
 // connection and (hopefully) get it echoed back.
 func echoclient(sn string, t *testing.T) {
-	ac, err := aclient.NewUnix(aclient.Config{Addr: sn})
+	ac, err := aclient.NewUnix(&aclient.Config{Addr: sn})
 	if err != nil {
 		t.Fatalf("aclient instantiation failed! %s", err)
 	}
