@@ -12,7 +12,7 @@ import (
 // before trying to talk.
 func TestConnTimeout(t *testing.T) {
 	// instantiate an asocket
-	c := Config{Sockname: "/tmp/test07.sock", Timeout: 25, Msglvl: All}
+	c := &Config{Sockname: "/tmp/test07.sock", Timeout: 25, Msglvl: All}
 	as, err := NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -57,7 +57,7 @@ func TestConnTimeout(t *testing.T) {
 // the timeout on our connection is 25ms. we'll wait 50ms then try
 // to send/recv on it.
 func sleeperclient(sn string, t *testing.T) {
-	ac, err := aclient.NewUnix(aclient.Config{Addr: sn})
+	ac, err := aclient.NewUnix(&aclient.Config{Addr: sn})
 	if err != nil {
 		t.Fatalf("aclient instantiation failed! %s", err)
 	}
