@@ -15,7 +15,7 @@ func badecho(s [][]byte) ([]byte, error) {
 // implement an echo server with a bad command
 func TestInternalError(t *testing.T) {
 	// instantiate an asocket
-	c := Config{Sockname: "/tmp/test08.sock", Msglvl: All}
+	c := &Config{Sockname: "/tmp/test08.sock", Msglvl: All}
 	as, err := NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -64,7 +64,7 @@ func TestInternalError(t *testing.T) {
 // this time our (less) fake client will send a string over the
 // connection and (hopefully) get it echoed back.
 func internalerrclient(sn string, t *testing.T) {
-	ac, err := aclient.NewUnix(aclient.Config{Addr: sn})
+	ac, err := aclient.NewUnix(&aclient.Config{Addr: sn})
 	if err != nil {
 		t.Fatalf("aclient instantiation failed! %s", err)
 	}
