@@ -10,7 +10,7 @@ import (
 // is defined in test 03.
 
 // DeadUnix returns an instance of Asock whose listener socket closes after 100ms
-func DeadUnix(c Config) (*Asock, error) {
+func DeadUnix(c *Config) (*Asock, error) {
 	l, err := net.ListenUnix("unix", &net.UnixAddr{Name: c.Sockname, Net: "unix"})
 	if err != nil {
 		return nil, err
@@ -23,7 +23,7 @@ func DeadUnix(c Config) (*Asock, error) {
 
 func TestENOLISTENER(t *testing.T) {
 	// implement an echo server
-	c := Config{Sockname: "/tmp/test06-1.sock", Msglvl: All}
+	c := &Config{Sockname: "/tmp/test06-1.sock", Msglvl: All}
 	as, err := DeadUnix(c)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -47,7 +47,7 @@ func TestENOLISTENER(t *testing.T) {
 
 func TestENOLISTENER2(t *testing.T) {
 	// implement an echo server
-	c := Config{Sockname: "/tmp/test06-2.sock", Msglvl: All}
+	c := &Config{Sockname: "/tmp/test06-2.sock", Msglvl: All}
 	as, err := DeadUnix(c)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -67,7 +67,7 @@ func TestENOLISTENER2(t *testing.T) {
 	}
 	// oh no, our asocket is dead. gotta spawn a new one.
 	as.Quit()
-	c = Config{Sockname: "/tmp/test06-3.sock", Msglvl: All}
+	c = &Config{Sockname: "/tmp/test06-3.sock", Msglvl: All}
 	as, err = NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't spawn second listener: %v", err)
