@@ -13,7 +13,7 @@ func echonosplit(args [][]byte) ([]byte, error) {
 
 // test AddHandler errors
 func TestSplitmodeErr(t *testing.T) {
-	c := Config{Sockname: "/tmp/test12.sock", Msglvl: Conn}
+	c := &Config{Sockname: "/tmp/test12.sock", Msglvl: Conn}
 	as, err := NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -38,7 +38,7 @@ func TestSplitmodeErr(t *testing.T) {
 
 // implement an echo server
 func TestEchoNosplit(t *testing.T) {
-	c := Config{Sockname: "/tmp/test12.sock", Msglvl: Conn}
+	c := &Config{Sockname: "/tmp/test12.sock", Msglvl: Conn}
 	as, err := NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
@@ -70,7 +70,7 @@ func TestEchoNosplit(t *testing.T) {
 }
 
 func echosplitclient(sn string, t *testing.T) {
-	ac, err := aclient.NewUnix(aclient.Config{Addr: sn})
+	ac, err := aclient.NewUnix(&aclient.Config{Addr: sn})
 	if err != nil {
 		t.Fatalf("aclient instantiation failed! %s", err)
 	}
