@@ -9,7 +9,7 @@ import (
 // properly.
 
 func TestMsgError(t *testing.T) {
-	c := Config{Sockname: "/tmp/test13.sock", Msglvl: All}
+	c := &Config{Sockname: "/tmp/test13.sock", Msglvl: All}
 	as, err := NewUnix(c, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
